"[docs]:251015_pointshop debugging"